Test configs approach

--- a/popup/index.html
+++ b/popup/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>OCC Debugger</title>
-</head>
+    <title>OCC Debugger</title>
+  </head>
 
-<body>
-  Nothing here yet
-</body>
+  <body>
+    <label>
+      <div>Domain</div>
+      <input id="domain" type='text' />
+    </label>
+    <label>
+      <input type='checkbox' checked><span>Topics</span>
+    </label>
+    <label>
+      <input type='checkbox' checked><span>Spinner</span>
+    </label>
+    <script type="text/javascript" src="script.js" ></script>
+  </body>
 </html>
